[build] docs: update

--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -547,6 +547,89 @@ const AsyncComponent = defineAsyncComponent(() => import('./AsyncComponent.vue')
 </template>
 ```
 
+### 使用defineAsyncComponent定义的组件没有编辑器类型提示
+
+解决方案：显式地声明类型
+
+```ts
+const PDFViewer: DefineComponent<{ fileUrl: string }> = defineAsyncComponent(() =>
+    loadWithDelay(import('./PDFViewer.vue'), 2000, 'PDFViewer')
+)
+```
+
+### 动态加载异步组件没有显示fallback内容
+
+```vue
+<template>
+    <p>
+        <button @click="showAsyncComponent = !showAsyncComponent">showAsyncComponent</button>
+        <Suspense>
+            <template #fallback>Loading number...</template>
+            <async-component v-if="showAsyncComponent" :id="123"></async-component>
+        </Suspense>
+    </p>
+</template>
+
+<script setup lang="ts" async>
+import { defineAsyncComponent, ref } from 'vue'
+import { loadWithDelay } from '@/router'
+defineOptions({ name: 'AboutView' })
+// 在点击时加载组件
+const AsyncComponent = defineAsyncComponent(() =>
+    loadWithDelay(import('@/components/AsyncComponent.vue'), 2000, 'AsyncComponent')
+)
+const showAsyncComponent = ref<boolean>(false)
+</script>
+
+```
+
+正确的修改：
+
+```vue
+<Suspense v-if="showAsyncComponent">
+    <template #fallback>Loading number...</template>
+    <async-component :id="123"></async-component>
+</Suspense>
+```
+
+## Suspense和defineAsyncComponent异步加载的组件优化
+
+```vue
+<button @click="showAsyncComponent = !showAsyncComponent">showAsyncComponent</button>
+<Suspense v-if="showAsyncComponent">
+    <template #fallback>Loading number...</template>
+    <async-component
+                     :number="number"
+                     @onloaded="isLoaded = true"
+                     >
+    </async-component>
+</Suspense>
+```
+
+上面的代码，点击按钮控制异步组件的显示和隐藏，由于用v-if控制Suspense，每次点击后都会导致asyc-component组件重新加载。
+
+如何在第一次加载异步组件后，后续的显示与隐藏不再重新加载
+
+1. async-component用v-show控制
+2. Suspense在v-if只执行一次
+
+```vue
+<Suspense v-if="isLoaded || showAsyncComponent">
+            <template #fallback>Loading number...</template>
+            <async-component
+                :number="number"
+                v-show="showAsyncComponent"
+                @onloaded="isLoaded = true"
+            ></async-component>
+        </Suspense>
+```
+
+
+
+
+
+
+
 ## Teleport
 
 Vue的Teleport和React的createProtal功能类似，可以把dom结构插入到指定的位置
@@ -591,10 +674,91 @@ const showAsyncComponent = ref<boolean>(false)
     <Suspense>
         <template #fallback>Loading...</template>
         <template #default>
-            <async-component v-if="showAsyncComponent"></async-component>
+            <async-component></async-component>
         </template>
     </Suspense>
 </template>
+```
+
+上面的代码中，每次进入页面都会延迟加载2s再显示AsyncComponent组件，这是不符合我们预期的，我们希望的是除第一次进入页面加载延迟外后续能够立刻加载AsyncComponent，就像React那样。
+
+为什么与预期结果不符呢？
+
+这是因为React 的 `Suspense` 与 Vue 的异步组件加载机制不同
+
+在 React 中，`React.lazy` 和 `Suspense` 会利用 React 的内部缓存机制，确保组件加载一次后，下次直接复用已经加载过的模块，避免了每次都重新加载异步组件。换句话说，React 的 `Suspense` 会确保异步组件在第一次加载后保持在内存中，之后的渲染直接使用已经加载的模块。
+
+而Vue 的 `Suspense` 没有内建的缓存机制，每次渲染时都会触发异步组件的加载，除非你显式地进行缓存管理。
+
+好了，那么我们要做的事情就很明确了，就是缓存已加载的异步组件。
+
+这里是通过loadWithDelay模拟延迟的，来看代码
+
+```ts
+export const loadWithDelay = (promise: Promise<any>, time: number) => {
+    const delay = (d: number) => new Promise((resolve) => setTimeout(resolve, d))
+    const delayPromise = delay(time)
+    return Promise.all([promise, delayPromise]).then(() => promise)
+}
+```
+
+添加缓存逻辑：
+
+```ts
+const cachedAsyncComponent = new Map()
+
+export const loadWithDelay = (promise: Promise<any>, time: number, key: string) => {
+    if (cachedAsyncComponent.has(key)) {
+        return cachedAsyncComponent.get(key)
+    }
+    const delay = (d: number) => new Promise((resolve) => setTimeout(resolve, d))
+    const delayPromise = delay(time)
+    cachedAsyncComponent.set(key, promise)
+    return Promise.all([promise, delayPromise]).then(() => promise)
+}
+```
+
+## LRU 缓存策略
+
+```ts
+class LRUCache {
+  private maxSize: number;
+  private cache: Map<string, any>;
+
+  constructor(maxSize: number) {
+    this.maxSize = maxSize;
+    this.cache = new Map();
+  }
+
+  set(key: string, value: any) {
+    if (this.cache.has(key)) {
+      this.cache.delete(key);
+    } else if (this.cache.size === this.maxSize) {
+      // 删除最不常用的项
+      this.cache.delete(this.cache.keys().next().value);
+    }
+    this.cache.set(key, value);
+  }
+
+  get(key: string) {
+    if (!this.cache.has(key)) {
+      return undefined;
+    }
+    // 将访问过的项移到末尾，表示它是最近使用的
+    const value = this.cache.get(key);
+    this.cache.delete(key);
+    this.cache.set(key, value);
+    return value;
+  }
+}
+
+const lruCache = new LRUCache(10); // 设置最大缓存大小为10
+
+// 设置缓存
+lruCache.set('PDFViewer', componentPromise);
+
+// 获取缓存
+const cachedComponent = lruCache.get('PDFViewer');
 ```
 
 
@@ -707,5 +871,46 @@ slotProps是插槽传递的数据
 defineSlots<{
     default(props: { message: string }): any
 }>()
+```
+
+
+
+## 通过app.component全局注册的组件没有编辑器提示
+
+全局注册的组件，由于没有在文件内import，导致lsp服务无法分析组件，故而没有编辑器提示
+
+需要手动扩展Vue 的 `GlobalComponents` 类型
+
+在项目的 `src` 目录下创建一个新的文件（通常命名为 `global-components.d.ts` 或类似名称），用于声明全局组件类型。
+
+```ts
+declare module '@vue/runtime-core' {
+    interface GlobalComponents {
+        AsComponent: typeof import('../components/AsyncComponent.vue')['default']
+    }
+}
+```
+
+### 符号链接导致的路径问题
+
+但是有个问题，当我们的项目是由pnpm创建的时候，node_modules下没有@vue/runtime-core这个目录
+
+取而代之的是.pnpm目录下的符号链接
+
+解决办法：
+
+使用 TypeScript Paths 显式声明路径
+
+```json
+{
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@vue/runtime-core": [
+        "./node_modules/.pnpm/@vue+runtime-core@3.5.3/node_modules/@vue/runtime-core/dist/runtime-core.d.ts"
+      ]
+    }
+  }
+}
 ```
 
