[build] docs: update

--- a/docs/frontend/JavaScript/ES6/1.深入理解Promise.md
+++ b/docs/frontend/JavaScript/ES6/1.深入理解Promise.md
@@ -393,3 +393,39 @@ console.log(1); // 1, 2, 3, 4
 ### Async await reject问题
 
 async await语法不能接收reject，需要使用try catch处理
+
+
+
+
+
+
+
+## Promise并行
+
+先来看几段代码
+
+代码一：
+
+```ts
+const getLoader = async () => {
+    const numberVal = await route.meta.number
+    const nameVal = await route.meta.name
+    number.value = numberVal
+    name.value = nameVal
+}
+```
+
+1. **串行执行**：两个 `await` 是依次执行的，先等待一个 `Promise`，再等待另一个。
+
+代码二：
+
+```ts
+const getLoader = async () => {
+    const numberVal = route.meta.number
+    const nameVal = route.meta.name
+    number.value = await numberVal
+    name.value = await nameVal
+}
+```
+
+两个 `Promise` 可以并行执行
