--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -171,6 +171,8 @@ defineModel接收两个参数
 
 第一个参数是绑定的模型名称，第二个参数是配置对象
 
+defineModel返回的是一个Ref对象CustomRefImpl
+
 ```ts
 const id = defineModel('id', {
     type: Number,
@@ -409,6 +411,45 @@ provide('globalCount', 1000);
 
 const globalData = inject('globalCount') // 1000
 ```
+
+provide/inject的封装使用
+
+这里将store设置为只读类型，以方便控制全局状态的修改
+
+```ts
+import { inject, provide, reactive, readonly } from 'vue'
+
+type StoreType = {
+    name: string
+    age: number
+}
+
+type ContextType = {
+    state: Readonly<StoreType>
+    incrementAge: () => void
+}
+
+export function ProvideContext() {
+    const state = reactive<StoreType>({
+        name: 'zs',
+        age: 20
+    })
+    const incrementAge = () => {
+        state.age++
+    }
+    provide('GlobalContext', { state: readonly(state), incrementAge })
+}
+
+export function useContext() {
+    const context = inject<ContextType>('GlobalContext')
+    if (!context) {
+        throw new Error('useContext must be used within a ProvideContext!')
+    }
+    return context
+}
+```
+
+
 
 ## Plugin
 
@@ -659,7 +700,7 @@ const showAsyncComponent = ref<boolean>(false)
     <template #fallback>Loading number...</template>
     <async-component
                      :number="number"
-                     @onloaded="isLoaded = true"
+                     @loaded="isLoaded = true"
                      >
     </async-component>
 </Suspense>
@@ -678,12 +719,27 @@ const showAsyncComponent = ref<boolean>(false)
             <async-component
                 :number="number"
                 v-show="showAsyncComponent"
-                @onloaded="isLoaded = true"
+                @loaded="isLoaded = true"
             ></async-component>
         </Suspense>
 ```
 
 
+
+前面讲到通过异步组件`@loaded="isLoaded = true"`来减少re-render，看官方文档SuspenseProps后发现其实还可以通过onResolve事件来实现这一效果
+
+```vue
+<Suspense
+          @resolve="isLoaded = true"
+          v-if="isLoaded || showAsyncComponent">
+    <template #fallback>Loading number...</template>
+    <async-component
+                     v-show="showAsyncComponent"
+                     :number="number"
+                     >
+    </async-component>
+</Suspense>
+```
 
 
 
