[build] docs: update

--- a/docs/frontend/React/4.前端常见解决方案/3-前端文件上传与下载.md
+++ b/docs/frontend/React/4.前端常见解决方案/3-前端文件上传与下载.md
@@ -272,3 +272,125 @@ capture="camera" 为调起摄像头
 
 [input上传图片安卓机无法选择相机](https://blog.csdn.net/weixin_43687896/article/details/106106579?spm=1001.2101.3001.6650.3&utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-3.pc_relevant_default&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-3.pc_relevant_default&utm_relevant_index=5)
 
+
+
+
+
+## 前端文件切片上传与断点续传
+
+```html
+<input type="file" @change="handleFileChange" />
+<button @click="handleUpload">upload</button>
+```
+
+```ts
+/**
+ * 切片文件
+ * @param file
+ * @param chunkSize
+ */
+function sliceFile(file: File, chunkSize = 5 * 1024 * 1024) {
+    const chunks = []
+    let current = 0
+    while (current < file.size) {
+        const slice = file.slice(current, current + chunkSize)
+        chunks.push(slice)
+        current += chunkSize
+    }
+    return chunks
+}
+
+/**
+ * 生成文件唯一标识
+ * @param file
+ */
+async function generateFileHash(file: File) {
+    const buffer = await file.arrayBuffer()
+    const hashBuffer = await crypto.subtle.digest('SHA-256', buffer)
+    const hashArray = Array.from(new Uint8Array(hashBuffer))
+    return hashArray.map((b) => b.toString(16).padStart(2, '0')).join('')
+}
+/**
+ * 检查已上传分片
+ * @param fileHash 
+ */
+async function checkUploadedChunks(fileHash: string) {
+    const res = await checkFileChunk({ fileHash })
+    return res
+}
+```
+
+上传分片
+
+```ts
+/**
+ * 上传分片
+ * @param file
+ * @param chunks
+ * @param uploadedChunks
+ * @param fileHash
+ */
+async function uploadChunks(
+    file: File,
+    chunks: Blob[],
+    uploadedChunks: number[] | undefined,
+    fileHash: string
+) {
+    for (let i = 0; i < chunks.length; i++) {
+        if (uploadedChunks && uploadedChunks.includes(i)) {
+            console.log(`Chunk ${i} already uploaded, skipping...`)
+            continue
+        }
+        console.log('chunks: ', chunks)
+        const formData = new FormData()
+        formData.append('chunk', chunks[i])
+        formData.append('chunkIndex', String(i))
+        formData.append('fileHash', fileHash)
+
+        await axios.post('http://127.0.0.1:3000/upload', formData, {
+            headers: { 'Content-Type': 'multipart/form-data' },
+            onUploadProgress: (progressEvent) => {
+                if (progressEvent.total) {
+                    console.log(
+                        `Chunk ${i} progress: ${Math.round(
+                            (progressEvent.loaded / progressEvent.total) * 100
+                        )}%`
+                    )
+                }
+            }
+        })
+    }
+}
+```
+
+合并分片
+
+```ts
+/**
+ * 合并分片
+ * @param fileHash
+ * @param totalChunks
+ */
+async function mergeChunks(fileHash: string, totalChunks: number) {
+    await mergeFileChunk({ fileHash, totalChunks })
+}
+```
+
+最终提交
+
+```ts
+async function uploadFile(file: File) {
+    const chunkSize = 5 * 1024 * 1024 // 5M
+    const fileHash = await generateFileHash(file)
+    const chunks = sliceFile(file, chunkSize)
+
+    // 检查已上传分片
+    const uploadedChunks = await checkUploadedChunks(fileHash)
+    // 上传分片
+    await uploadChunks(file, chunks, uploadedChunks, fileHash)
+    // 合并分片
+    await mergeChunks(fileHash, chunks.length)
+    console.log('File uploaded successfully!')
+}
+```
+
