--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -430,14 +430,14 @@ type ContextType = {
 }
 
 export function ProvideContext() {
-    const state = reactive<StoreType>({
+    const __state = reactive<StoreType>({
         name: 'zs',
         age: 20
     })
     const incrementAge = () => {
-        state.age++
+        __state.age++
     }
-    provide('GlobalContext', { state: readonly(state), incrementAge })
+    provide('GlobalContext', { state: readonly(__state), incrementAge })
 }
 
 export function useContext() {
@@ -655,6 +655,16 @@ const AsyncComponent = defineAsyncComponent(() => import('./AsyncComponent.vue')
 const PDFViewer: DefineComponent<{ fileUrl: string }> = defineAsyncComponent(() =>
     loadWithDelay(import('./PDFViewer.vue'), 2000, 'PDFViewer')
 )
+
+// @ts-ignore
+const AsyncComponent: DefineSetupFnComponent<AsyncComponentProps, AsyncComponentEmits> = defineAsyncComponent(
+  () => loadWithDelay(import('../components/AsyncComponent.vue'), 2000,        'AsyncComponent')
+)
+
+const Await: (typeof import('../components/Await.vue'))['default'] = defineAsyncComponent(
+    () => import('../components/Await.vue')
+)
+
 ```
 
 ### 动态加载异步组件没有显示fallback内容
@@ -741,7 +751,7 @@ const showAsyncComponent = ref<boolean>(false)
 </Suspense>
 ```
 
-
+这里需要注意的一个点是async- component组件内必须有一个根节点，这样v-show才能作用在根节点（`v-show` 的机制是通过操作根节点的 CSS 样式（`display: none`）来控制组件的显示和隐藏。）
 
 
 
