[build] docs: update

--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -449,6 +449,16 @@ export function useContext() {
 }
 ```
 
+**使用：**
+
+```ts
+// 父级组件比如App.vue
+ProvideContext()
+
+// 子组件
+const globalContext = useContext()
+```
+
 
 
 ## Plugin
