--- a/docs/frontend/前端开发常见解决方案/图片懒加载.md
+++ b/docs/frontend/前端开发常见解决方案/图片懒加载.md
@@ -120,3 +120,48 @@ https://zhuanlan.zhihu.com/p/55311726
 
 [Intersection Observer API](https://developer.mozilla.org/zh-CN/docs/Web/API/Element/getBoundingClientRect)
 
+
+
+
+
+## 关于md-editor的图片懒加载
+
+即v-html的图片懒加载
+
+可以使用自定义指令
+
+```ts
+
+const lazyLoadDirective: ObjectDirective = {
+    mounted: (el: HTMLElement) => {
+        console.log('el: ', el)
+        nextTick(() => {
+            const imgObserver = new IntersectionObserver((entries, observer) => {
+                entries.forEach((entry) => {
+                    if (entry.isIntersecting) {
+                        const img = entry.target as HTMLImageElement
+                        img.src = img.dataset.src || ''
+                        observer.unobserve(img)
+                    }
+                })
+            })
+            const imgs = el.querySelectorAll('img')
+            console.log('imgs: ', imgs)
+            imgs.forEach((img) => {
+                img.dataset.src = img.src
+                img.src = ''
+                imgObserver.observe(img)
+            })
+        })
+    }
+}
+// 这里最重要的步骤是遍历imgs将图片的data-src赋值，并清空data属性
+```
+
+但是这么做也会有个问题
+
+NetWork中会大量canceled的图片请求，虽然无关紧要，但是并不美观
+
+因此最好是在v-html这一步就去设置data-src属性
+
+这样，上面代码中的 `img.dataset.src = img.src; img.src = ''`这一步也就不需要了。
