--- a/docs/frontend/React/4.前端常见解决方案/10-异步任务并发控制.md
+++ b/docs/frontend/React/4.前端常见解决方案/10-异步任务并发控制.md
@@ -80,3 +80,35 @@ const handleRequest = () => {
 `pLimit(MAX_CONCURRENT_UPLOADS)` 创建了一个控制器。
 
 `limit(() => getNumber({ id: i }))` 将上传任务包裹在并发控制器中，确保最大同时上传的任务数不超过设定值。
+
+
+
+## 实现一个pLimit
+
+```ts
+export const pLimit = (max: number) => {
+    const queue: Array<() => Promise<any>> = []
+    let currentRequests = 0
+    const runTask = async (task: () => Promise<any>) => {
+        currentRequests++
+        try {
+            await task()
+        } catch (error) {
+            console.log('error: ', error)
+        } finally {
+            currentRequests--
+            if (queue.length > 0) {
+                const nextTask = queue.shift()
+                nextTask && runTask(nextTask)
+            }
+        }
+    }
+    const enqueueTask = async (task: () => Promise<any>) => {
+        if (currentRequests < max) {
+            runTask(task)
+        } else queue.push(task)
+    }
+    return enqueueTask
+}
+```
+
