[build] docs: update

--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -990,3 +990,53 @@ declare module '@vue/runtime-core' {
 }
 ```
 
+
+
+## 动态样式
+
+```vue
+<span
+      v-for="(item, index) in content"
+      :class="{
+              [$style.active]:
+              audioCurrentTime &&
+              audioCurrentTime >= item.time[0] &&
+              audioCurrentTime <= item.time[1],
+              [$style.vad]: true
+              }"
+      :key="index"
+      :data-wb="item.time[0]"
+      :data-we="item.time[1]"
+      >{{ item.text }}
+</span>
+
+<style lang="scss" module>
+.active {
+    color: #fff;
+    background-color: #4499ff;
+}
+.vad {
+    transition:
+        background-color 0.05s ease,
+        color 0.05s ease;
+}
+</style>
+```
+
+这里的[$style.active]是因为使用了cssModule
+
+
+
+如果不使用cssModule，而是scoped
+
+```vue
+<span
+      :class="{
+              'audio-item cursor-pointer overflow-hidden text-ellipsis whitespace-nowrap': true,
+              'is-active': homeContext.state.currActiveAudioId === item.id
+              }"
+      @click="chooseAudioRecord(item.id)"
+      >{{ item.audioName }}
+</span>
+```
+
