[build] docs: update

--- a/docs/frontend/React/4.前端常见解决方案/3-前端文件上传与下载.md
+++ b/docs/frontend/React/4.前端常见解决方案/3-前端文件上传与下载.md
@@ -396,3 +396,30 @@ async function uploadFile(file: File) {
 }
 ```
 
+
+
+## 使用onUploadProgress监听文件上传进度
+
+Axios可以使用onUploadProgress来监听文件上传进度
+
+```ts
+await axios.post('http://127.0.0.1:3000/upload', formData, {
+    headers: { 'Content-Type': 'multipart/form-data' },
+    onUploadProgress: (progressEvent) => {
+        console.log('progressEvent: ', progressEvent);
+        if (progressEvent.total) {
+            console.log(
+                `Chunk ${i} progress: ${Math.round(
+                    (progressEvent.loaded / progressEvent.total) * 100
+                )}%`
+            )
+        }
+    }
+})
+```
+
+progressEvent属性
+
+<img src="https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20250120102134620.png" alt="image-20250120102134620" style="zoom: 67%;" />
+
+通过`(progressEvent.loaded / progressEvent.total) * 100`来获取上传进度
