--- a/docs/frontend/React/4.前端常见解决方案/7-密码输入框禁止自动填充.md
+++ b/docs/frontend/React/4.前端常见解决方案/7-密码输入框禁止自动填充.md
@@ -1,3 +1,23 @@
 ### [使用 autocomplete="new-password" 阻止自动填充](https://developer.mozilla.org/zh-CN/docs/Web/Security/Securing_your_site/Turning_off_form_autocompletion#使用_autocompletenew-password_阻止自动填充)
 
 autocomplete="new-password"
+
+
+
+
+
+## 设置输入框光标位置
+
+`input.setSelectionRange(start, end)`：用于设置输入框的光标和文本选区位置。`start` 是光标的位置，`end` 是选区的结束位置（通常用于选中文本）。如果 `start` 和 `end` 相同，则光标会停在该位置。
+
+```ts
+// 获取原生input
+const input: HTMLInputElement = inputRef.value[0].$el.querySelector('input')
+const dotIndex = input.value.lastIndexOf('.')
+console.log('dotIndex: ', dotIndex)
+if (dotIndex !== -1) {
+    input.setSelectionRange(dotIndex, dotIndex)
+    input.focus()
+}
+```
+
