--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -473,6 +473,7 @@ const myPlugin: ObjectPlugin<{ message: string }> = {
         app.config.globalProperties.$myPluginMethod = () => {
             console.log('myPluginMethod')
         }
+        // 推荐
         const myPluginMethod = () => {
             console.log('myPluginMethod', options.message)
         }
@@ -500,6 +501,40 @@ app.use(myPlugin, { message: 'hello' })
 // Component
 const { myPluginMethod } = useMyPlugin()
 ```
+
+函数式写法：
+
+```ts
+export const ourPlugin = (options: { message: string }) => {
+    return {
+        install(app: App) {
+            console.log('app: ', app)
+            const ourPluginMethod = () => {
+                console.log('ourPluginMethod', options.message)
+            }
+            app.provide('ourPluginMethod', ourPluginMethod)
+        }
+    }
+}
+export function useOurPlugin() {
+    const ourPluginMethod = inject<() => void>('ourPluginMethod')
+    if (!ourPluginMethod) {
+        throw new Error('ourPlugin is not provided. Make sure to use app.use(ourPlugin)!')
+    }
+    return { ourPluginMethod }
+}
+```
+
+使用
+
+```ts
+// main.ts
+app.use(ourPlugin({ message: 'hello' }))
+```
+
+
+
+
 
 
 
@@ -1038,5 +1073,20 @@ declare module '@vue/runtime-core' {
       @click="chooseAudioRecord(item.id)"
       >{{ item.audioName }}
 </span>
+```
+
+
+
+## useTemplateRef
+
+```vue
+<button ref="buttonRef" @click="getRef">getRef</button>
+
+<script>
+    const templateRef = useTemplateRef('buttonRef')
+    const getRef = () => {
+        console.log(templateRef.value)
+    }
+</script>
 ```
 
