--- a/docs/frontend/React/4.前端常见解决方案/10-异步任务并发控制.md
+++ b/docs/frontend/React/4.前端常见解决方案/10-异步任务并发控制.md
@@ -112,3 +112,59 @@ export const pLimit = (max: number) => {
 }
 ```
 
+
+
+## 模拟setInterval轮询
+
+```ts
+/**
+ * 创建一个定时器，每隔ms执行一遍cb，会立即执行cb
+ * @param cb - 回调函数
+ * @param ms - 每隔多少毫秒执行一次
+ * @returns 返回一个取消定时器的函数
+ */
+export const mySetInterval = (cb: () => void, ms: number) => {
+  let timeoutId: number
+  const excute = () => {
+    if (timeoutId) {
+      clearTimeout(timeoutId)
+    }
+    try {
+      cb()
+      timeoutId = setTimeout(excute, ms)
+    } catch (e) {
+      console.error(e)
+    }
+  }
+  excute()
+  return () => clearTimeout(timeoutId)
+}
+```
+
+改成不会立即执行
+
+```ts
+/**
+ * 创建一个定时器，每隔ms执行一遍cb，不会立即执行cb
+ * @param cb - 回调函数
+ * @param ms - 每隔多少毫秒执行一次
+ * @returns 返回一个取消定时器的函数
+ */Ï
+export const mySetInterval = (cb: () => void, ms: number) => {
+  let timeoutId: number
+  const excute = () => {
+    if (timeoutId) {
+      clearTimeout(timeoutId)
+    }
+    try {
+      cb()
+      timeoutId = setTimeout(excute, ms)
+    } catch (e) {
+      console.error(e)
+    }
+  }
+  timeoutId = setTimeout(excute, ms)
+  return () => clearTimeout(timeoutId)
+}
+```
+
