--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -1065,7 +1065,7 @@ declare module '@vue/runtime-core' {
 如果不使用cssModule，而是scoped
 
 ```vue
-<span
+<span 
       :class="{
               'audio-item cursor-pointer overflow-hidden text-ellipsis whitespace-nowrap': true,
               'is-active': homeContext.state.currActiveAudioId === item.id
@@ -1073,6 +1073,21 @@ declare module '@vue/runtime-core' {
       @click="chooseAudioRecord(item.id)"
       >{{ item.audioName }}
 </span>
+```
+
+还可以使用数组形式
+
+```html
+<span
+      :class="[
+              'audio-item cursor-pointer overflow-hidden text-ellipsis whitespace-nowrap',
+              item.status === AudioStatus.FAILED ? 'failed' : ''
+              ]"
+      @click="chooseAudioRecord(item.id)"
+      :title="item.audioName"
+      >
+    {{ item.audioName }}
+</span>Ï
 ```
 
 
