--- a/docs/frontend/CSS/2-文本及图片/文本溢出及换行.md
+++ b/docs/frontend/CSS/2-文本及图片/文本溢出及换行.md
@@ -110,3 +110,20 @@ https://developer.mozilla.org/zh-CN/docs/Web/CSS/word-break
 - `word-break: keep-all` 属性指定保持所有单词连在一起，不进行断行。这意味着只有在遇到空格或其他可打断点的字符时才会进行换行，而不会在单词内部断行。
 
 这两个属性通常一起使用，以确保文本在容器中不换行，并且尽可能地保持每个单词完整显示。
+
+
+
+
+
+## 文字之间间距letter-spacing
+
+```css
+/* Keyword value */
+letter-spacing: normal;
+
+/* <length> values */
+letter-spacing: 0.3em;
+letter-spacing: 3px;
+letter-spacing: 0.3px;
+```
+
