--- a/docs/frontend/CSS/2-文本及图片/关于图片的显示.md
+++ b/docs/frontend/CSS/2-文本及图片/关于图片的显示.md
@@ -5,3 +5,19 @@
 默认图片是会溢出div的，怎么让图片自适应，即高度变为50px呢？
 
 给图片设置高度100%
+
+
+
+## CSS响应式图片
+
+image-set() 语法
+
+```css
+background-image: image-set(
+  "image-1x.jpg" 1x,
+  "image-2x.jpg" 2x,
+  "image-3x.jpg" 3x
+)
+```
+
+`1x`、`2x`、`3x` 代表 **设备像素比（DPR）**，浏览器会根据屏幕分辨率选择最合适的图片。
