[build] docs: update

--- a/docs/frontend/React/4.前端常见解决方案/14-图片预加载.md
+++ b/docs/frontend/React/4.前端常见解决方案/14-图片预加载.md
@@ -173,3 +173,69 @@ how to use:
 <img data-src="https://picsum.photos/1000/2000" v-lazy-load-img />
 ```
 
+
+
+## Vite项目中批量导入图片并使用
+
+方法一：
+
+```ts
+async function loadImages(images: Record<string, () => Promise<any>>) {
+    const imagesModules = await Promise.all(Object.keys(images).map((key: string) => images[key]()))
+    return imagesModules.map((module) => module.default)
+}
+```
+
+```vue
+<img width="50" v-for="img in imageUrls" :key="img" :src="img" />
+
+<script setup lang="ts">
+const images = import.meta.glob(`@/assets/images/platform-icon*.png`)
+
+const imageUrls = ref<string[]>([])
+AutoloadImages(images).then((urls) => (imageUrls.value = urls))
+</script>
+```
+
+方法二：
+
+```vue
+<img width="50" v-for="img in images2Urls" :key="img" :src="img" />
+
+<script setup lang="ts">
+const images2: Record<string, any> = import.meta.glob('@/assets/images/platform-icon*.png', {
+    eager: true,
+    import: 'default'
+})
+const images2Urls = Object.values(images2)
+</script>
+```
+
+方法三：
+
+如果img遍历的不是导入的字段，而是字符串名称
+
+```vue
+<img width="50" v-for="img in imgList" :key="img.name" :src="imageMap[img.name]" />
+
+<script setup lang="ts">
+const imgList = [
+    { name: 'platform-icon1' },
+    { name: 'platform-icon2' },
+    { name: 'platform-icon3' },
+    { name: 'platform-icon4' }
+]
+const images2 = import.meta.glob<string>('@/assets/images/platform-icon*.png', {
+    eager: true,
+    import: 'default'
+})
+const imageMap: Record<string, string> = {}
+Object.entries(images2).forEach(([key, value]) => {
+    const filename = key.split('/').pop()?.replace('.png', '')
+    if (filename) {
+        imageMap[filename] = value as string
+    }
+})
+</script>
+```
+
