--- a/docs/frontend/vue/Vue3/1.5-Vue re-render机制.md
+++ b/docs/frontend/vue/Vue3/1.5-Vue re-render机制.md
@@ -1,3 +1,9 @@
+---
+title: Vue的re-render机制
+---
+
+
+
 ## Vue的re-render机制
 
 Vue 的 **re-render** 过程会导致模板字符串（包括在 `template` 中的绑定）重新执行。原因是，Vue 在每次数据更新时，会重新计算并渲染模板，进而触发模板内的所有动态绑定的更新。
