--- a/docs/linux/Nginx/4.nginx常见问题.md
+++ b/docs/linux/Nginx/4.nginx常见问题.md
@@ -40,45 +40,56 @@
 
 ### proxy_pass 不加斜杠
 
-如果 `proxy_pass` 后不带 `/`，Nginx 会将 **客户端请求路径的匹配部分** 拼接到 `proxy_pass` 后。
+如果 `proxy_pass` 后不带 `/`，Nginx 会将**匹配的 location URI 部分**直接替换为 `proxy_pass` 指定的 URL，而不会保留匹配的部分。
 
 ```nginx
-location /users {
-    proxy_pass http://127.0.0.1:9001;
+location /images/ {
+    proxy_pass http://127.0.0.1:30008;
 }
 ```
 
-我们访问http://localhost:1024/users/123.txt，实际访问代理地址：http://127.0.0.1:9001/users/123.txt
+我们访问 http://localhost:27001/images/data.png，实际访问代理地址：http://127.0.0.1:30008/images/data.png
+
+```nginx
+location /images/ {
+    proxy_pass http://127.0.0.1:30008/images;
+}
+```
+
+访问http://localhost:27001/images/data.png，实际访问地址：http://127.0.0.1:30008/app/data.png
+
+如果你希望 `/images/` 直接映射到 `/app/images/`，你需要改成：
+
+```nginx
+location /images/ {
+    proxy_pass http://127.0.0.1:9001/app/images/;
+}
+```
+
+这样 `http://localhost:1024/users/123.txt` 会变成 `http://127.0.0.1:9001/app/users/123.txt`。
 
 ### proxy_pass 加斜杠
 
-如果 `proxy_pass` 后带有 `/`，Nginx 会 **移除匹配部分**，将剩余的路径拼接到目标地址上。
+如果 `proxy_pass` 后带有 `/`，Nginx 会 **移除匹配部分**，然后将剩余的 URI 追加到 `proxy_pass` 指定的 URL。
 
 ```nginx
-location /users/ {
-    proxy_pass http://127.0.0.1:9001/;
+location /pictures/ {
+    proxy_pass http://127.0.0.1:30008/;
 }
 ```
 
-我们访问http://localhost:1024/users/123.txt，实际访问代理地址：http://127.0.0.1:9001/123.txt
+我们访问 http://localhost:27001/pictures/dora.png，实际访问代理地址：http://127.0.0.1:30008/dora.png
+
 
 ```nginx
-location /users/ {
-    proxy_pass http://127.0.0.1:9001/app;
+location /pictures/ {
+    proxy_pass http://127.0.0.1:30008/pictures/;
 }
 ```
 
-访问http://localhost:1024/users/123.txt，实际访问地址：http://127.0.0.1:9001/app123.txt
+访问http://localhost:27001/pictures/dora.png，实际访问地址：http://127.0.0.1:30008/pictures/dora.png
 
-```nginx
-location /users/ {
-    proxy_pass http://127.0.0.1:9001/app/;
-}
-```
-
-访问http://localhost:1024/users/123.txt，实际访问地址：http://127.0.0.1:9001/app/123.txt
-
-总结，proxy_pass没有斜杠，则只替换ip和端口部分，有斜杠则替换全部
+总结，proxy_pass没有斜杠，则只替换ip和端口部分，有斜杠则将匹配部分后的值拼接到proxy_pass上
 
 
 
@@ -102,25 +113,29 @@ server {
 
 ```nginx
 server {
-    listen 80;
-    server_name example.com;
-
+    listen 30008;
+    server_name localhost;
+    # root /opt/homebrew/var/web;
     # 使用 root 指令
     location /images/ {
-        root /var/www/html/;
+        root /opt/homebrew/var/web/;
     }
-
     # 使用 alias 指令
     location /pictures/ {
-        alias /var/www/html/images/;
+        alias /opt/homebrew/var/web/pictures/;
+    }
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 }
 ```
 
-- 请求 http://example.com/images/picture.jpg 将映射到 /var/www/html/images/picture.jpg
-- 请求 http://example.com/pictures/picture.jpg 将映射到 /var/www/html/images/picture.jpg
+- 请求 http://localhost:30008/images/data.png，匹配 /images/，root会拼上 /images/data.png，将映射到 /opt/homebrew/var/web/images/data.png
+- 请求 http://localhost:30008/pictures/dora.png，匹配 /pictures/，alias会替换掉location的值，将映射到 /opt/homebrew/var/web/pictures/dora.png
 
+如果将上面的alias调整为alias /opt/homebrew/var/web/pictures，不以 / 结尾，则返回404
 
+==所以alias要以 / 结尾==
 
 举例：
 
