--- a/docs/frontend/CSS/4-浏览器/浏览器滚动条样式.md
+++ b/docs/frontend/CSS/4-浏览器/浏览器滚动条样式.md
@@ -2,3 +2,32 @@
 
 https://juejin.cn/post/6975319039157469192
 
+## 定制浏览器滚动条
+
+在 WebKit 浏览器中（如 Chrome 和 Safari）支持通过 `::-webkit-scrollbar` 系列伪元素来进行自定义。
+
+``` css
+/* 设置垂直滚动条的宽度 */
+::-webkit-scrollbar {
+  width: 8px;  /* 控制垂直滚动条的宽度 */
+}
+
+/* 自定义滚动条轨道 */
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;  /* 设置轨道的背景颜色 */
+  border-radius: 10px;         /* 设置轨道的圆角 */
+}
+
+/* 自定义滑块（可拖动部分） */
+::-webkit-scrollbar-thumb {
+  background-color: #888;      /* 滑块的背景颜色 */
+  border-radius: 10px;         /* 滑块的圆角 */
+  border: 2px solid #f1f1f1;   /* 给滑块加一个边框 */
+}
+
+/* 鼠标悬停时自定义滑块样式 */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;  /* 滑块的背景颜色变化 */
+}
+```
+
