[build] docs: update

--- a/docs/frontend/React/1-1.React学习/2.1-React实现复用.md
+++ b/docs/frontend/React/1-1.React学习/2.1-React实现复用.md
@@ -157,3 +157,51 @@ export default function TestComponent({ component, children }: TestComponentProp
 }
 ```
 
+
+
+## render props
+
+```tsx
+interface TestProps {
+    count: number
+    onAddCount: (val: number) => void
+    render: (count: number) => JSX.Element
+}
+
+const TestComponent: React.FC<TestProps> = ({ count, onAddCount, render }) => {
+    return (
+        <div>
+            <button onClick={() => onAddCount(3)}>onAddCount: {count}</button>
+            {render(200)}
+        </div>
+    )
+}
+
+const Home = () => {
+    const [render, setRender] = useState<boolean>(false)
+    const [count, setCount] = useState<number>(1000)
+
+    const handleRender = () => setRender(true)
+    const handleDestory = () => setRender(false)
+    const increment = (val: number) => {
+        setCount(count + val)
+
+    }
+    return (
+        <div className='w-full'>
+            <div>
+                <button onClick={handleRender}>render</button>
+                <button onClick={handleDestory}>destory</button>
+                {render && (
+                    <TestComponent
+                        count={count}
+                        onAddCount={increment}
+                        render={(count: number) => <span>{count + 5}</span>}
+                    />
+                )}
+            </div>
+        </div>
+    )
+}
+```
+
