[build] docs: update

--- a/docs/frontend/React/4.前端常见解决方案/14-图片预加载.md
+++ b/docs/frontend/React/4.前端常见解决方案/14-图片预加载.md
@@ -18,12 +18,18 @@ img标签会直接下载图片
 <script setup lang="ts">
 import { ref } from 'vue'
 
-defineOptions({ name: 'NewImage' })
-const { src } = defineProps<{
+interface ImageProps {
     src: string
-}>()
+    mode?: 'lazy' | 'preload'
+    width?: number | string
+    height?: number | string
+}Ï
+    
+defineOptions({ name: 'NewImage' })
+const { src, mode = 'lazy', width, height } = defineProps<ImageProps>()
 
 const error = ref<boolean>(false)
+const loading = ref<boolean>(true)
 
 const imgSrc = ref('')
 const imgRef = ref<HTMLImageElement>()
@@ -42,12 +48,18 @@ const preload = () => {
         console.error('图片加载失败')
     }
 }
-
-preload()
+mode === 'preload' && preload()
+const retry = () => {
+    error.value = false
+    showImage.value = false
+    preload()
+}
 </script>
 ```
 
 经过优化后的代码，支持预加载和懒加载模式
+
+
 
 ```vue
 <template>
@@ -73,17 +85,7 @@ preload()
 import { ref } from 'vue'
 
 defineOptions({ name: 'NewImage' })
-const {
-    src,
-    mode = 'lazy',
-    width,
-    height
-} = defineProps<{
-    src: string
-    mode?: 'lazy' | 'preload'
-    width: number | `${number}` | undefined
-    height?: number | `${number}` | undefined
-}>()
+const { src, mode = 'lazy', width, height } = defineProps<ImageProps>()
 
 const error = ref<boolean>(false)
 const loading = ref<boolean>(true)
