[build] docs: update

--- a/docs/frontend/JavaScript/RegExp/正则表达式.md
+++ b/docs/frontend/JavaScript/RegExp/正则表达式.md
@@ -107,6 +107,27 @@ https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects
 - $$  插入一个 "$"。
 - $& 插入匹配的子串。
 
+`$&`：表示匹配的子串
+
+`$0`：表示整个匹配的子字符串
+
+`$1`：表示第一个捕获组的匹配结果
+
+`$2`：表示第二个捕获组的匹配结果，以此类推。
+
+replace的第二个参数可以是一个函数
+
+```ts
+// 使用函数作为replace的第二个参数
+let result = str.replace(/(\d+)/g, function(match, p1, offset, string) {
+  console.log(`match: ${match}`);        // 整个匹配的子字符串
+  console.log(`p1: ${p1}`);              // 第一个捕获组的匹配结果
+  console.log(`offset: ${offset}`);      // 匹配项在原字符串中的偏移位置
+  console.log(`string: ${string}`);      // 被匹配的原字符串
+  return `Number: ${p1 * 2}`;            // 返回替换字符串
+});
+```
+
 
 
 #### 数字千分位表示
