--- a/docs/frontend/React/4.前端常见解决方案/3-前端文件上传与下载.md
+++ b/docs/frontend/React/4.前端常见解决方案/3-前端文件上传与下载.md
@@ -423,3 +423,205 @@ progressEvent属性
 <img src="https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20250120102134620.png" alt="image-20250120102134620" style="zoom: 67%;" />
 
 通过`(progressEvent.loaded / progressEvent.total) * 100`来获取上传进度
+
+
+
+## FileUpload组件封装
+
+```vue
+<script setup lang="ts">
+import { uploadRecord } from '@/api/audio'
+import { useHomeContext } from '@/stores/modules/audio'
+import { Plus } from '@element-plus/icons-vue'
+import Progress from './Progress.vue'
+import {
+  ElButton,
+  ElIcon,
+  ElLoading,
+  ElMessage,
+  ElUpload,
+  type UploadRequestOptions
+} from 'element-plus'
+import { ref } from 'vue'
+
+type FileExternal = {
+  uid: number
+  percent?: number
+  status: 'uploading' | 'success'
+} & File
+
+const fileList = ref<FileExternal[]>([])
+
+const fileTypeWhiteList = ['audio/wav', 'audio/mpeg']
+
+const { refreshAudios } = useHomeContext()
+
+const httpRequest = (options: UploadRequestOptions) => {
+  const { file, onProgress, onSuccess, onError } = options
+  if (!fileTypeWhiteList.includes(file.type)) {
+    ElMessage.warning('上传文件格式不支持')
+    return false
+  }
+  if (file.size > 200 * 1024 * 1024) {
+    ElMessage.warning('上传文件大小最大200M')
+    return false
+  }
+  fileList.value.push(file)
+  console.log('fileList: ', fileList.value)
+  const formData = new FormData()
+  formData.append('audio', file)
+
+  // const loadingInstance = ElLoading.service({
+  //   lock: true,
+  //   text: '上传中',
+  //   background: 'rgba(0, 0, 0, 0.7)'
+  // })
+
+  uploadRecord(formData, (progressEvent) => {
+    if (progressEvent.total) {
+      let percentCompleted = Math.round((progressEvent.loaded / progressEvent.total) * 100)
+      const uploadFile = fileList.value.find((item) => item.uid === file.uid)
+      if (uploadFile) {
+        uploadFile.percent = percentCompleted
+      }
+      onProgress({ percent: percentCompleted })
+    }
+  })
+    .then((response) => {
+      if (response.code !== 200) {
+        ElMessage.error(response.msg)
+        return
+      }
+      onSuccess(response.data)
+      // fileList.value = fileList.value.filter((item) => item.uid !== file.uid)
+      refreshAudios()
+    })
+    .catch((error) => {
+      onError(error)
+    })
+    .finally(() => {
+      // loadingInstance.close()
+    })
+}
+const handleSuccess = () => {
+  ElMessage.success('上传成功')
+}
+const handleError = () => {
+  ElMessage.error('上传失败')
+}
+</script>
+
+<template>
+  <ElUpload
+    v-model:file-list="fileList"
+    :http-request="httpRequest"
+    :show-file-list="false"
+    @success="handleSuccess"
+    @error="handleError"
+    :accept="'.mp3,.wav'"
+  >
+    <slot name="default">
+      <ElButton type="primary" class="upload-btn--style">
+        <template #default> 添加音频 </template>
+        <template #icon>
+          <ElIcon size="16" class="mr-2">
+            <Plus />
+          </ElIcon>
+        </template>
+      </ElButton>
+    </slot>
+  </ElUpload>
+  <div v-for="(file, index) in fileList" :key="file.uid">
+    <Progress
+      v-if="file.uid"
+      :index="index"
+      :name="file.name"
+      :percentage="file.percent || 0"
+      :status="file.status"
+    />
+  </div>
+</template>
+
+<style lang="css" scoped>
+.upload-btn--style {
+  border-radius: 10px;
+  opacity: 1;
+  background: linear-gradient(180deg, #328eda 0%, #0039a4 100%);
+  width: 192px;
+  height: 40px;
+}
+</style>
+```
+
+Progress是进度条组件
+
+```vue
+<script setup lang="ts">
+import { ElProgress } from 'element-plus'
+import { computed } from 'vue'
+
+interface ProgressProps {
+  index: number
+  percentage: number
+  name: string
+  status: 'success' | 'uploading'
+}
+
+const props = defineProps<ProgressProps>()
+
+/**
+ * 定义百分比，未完成时进度为99
+ */
+const percent = computed(() => {
+  if (props.percentage === 100 && props.status === 'uploading') {
+    return 99
+  } else return props.percentage
+})
+</script>
+
+<template>
+  <Teleport to="body">
+    <ElProgress
+      :style="[{ top: `${index * 2 + 2}rem` }]"
+      v-if="status === 'uploading'"
+      :class="$style.progress"
+      :percentage="percent"
+      striped
+      striped-flow
+      text-inside
+      :stroke-width="15"
+    ></ElProgress>
+  </Teleport>
+</template>
+
+<style lang="css" module>
+.progress {
+  position: fixed;
+  top: 2rem;
+  right: 1.5rem;
+  width: 20rem;
+  height: 20px;
+  max-width: 500px;
+}
+</style>
+```
+
+### ElUpload的httpRequest参数
+
+当一次上传多个文件时，options会输出多次
+
+```ts
+const httpRequest = (options: UploadRequestOptions) => {
+  const { file, onProgress, onSuccess, onError } = options
+  console.log('options: ', options);
+  if (!fileTypeWhiteList.includes(file.type)) {
+    ElMessage.warning('上传文件格式不支持')
+    return false
+  }
+  if (file.size > 200 * 1024 * 1024) {
+    ElMessage.warning('上传文件大小最大200M')
+    return false
+  }
+}
+```
+
