--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -463,6 +463,8 @@ const globalContext = useContext()
 
 ## Plugin
 
+插件可以是一个带 `install()` 方法的对象，亦或直接是一个将被用作 `install()` 方法的函数。插件选项 (`app.use()` 的第二个参数) 将会传递给插件的 `install()` 方法。
+
 ```ts
 import { inject, type App, type ObjectPlugin } from 'vue'
 
