--- a/docs/frontend/React/4.前端常见解决方案/3-前端文件上传与下载.md
+++ b/docs/frontend/React/4.前端常见解决方案/3-前端文件上传与下载.md
@@ -625,3 +625,58 @@ const httpRequest = (options: UploadRequestOptions) => {
 }
 ```
 
+```ts
+/**
+ * 计算文件哈希值
+ */
+const calculateFileHash = (file: File): Promise<string> => {
+  return new Promise((resolve) => {
+    const reader = new FileReader()
+    reader.onload = (e) => {
+      const arrayBuffer = e.target?.result as ArrayBuffer
+      const hashArray = Array.from(new Uint8Array(arrayBuffer)).slice(0, 1024) // 取前1024字节作为简单哈希
+      const hashString = hashArray.map((b) => b.toString(16).padStart(2, '0')).join('')
+      resolve(hashString)
+    }
+    // 只读取文件的前部分来计算哈希，避免大文件性能问题
+    const blob = file.slice(0, 1024 * 1024) // 读取前1MB
+    reader.readAsArrayBuffer(blob)
+  })
+}
+
+// 存储文件哈希值的映射
+const fileNameToHash = ref<Map<string, string>>(new Map())
+const hashToFileName = ref<Map<string, string>>(new Map())
+
+const beforeUpload = async (file: File) => {
+  // 计算文件哈希
+  const fileHash = await calculateFileHash(file)
+
+  // 检查文件是否重复
+  const isDuplicateName = fileNameToHash.value.has(file.name)
+  const isDuplicateContent = hashToFileName.value.has(fileHash)
+
+  if (isDuplicateName && isDuplicateContent) {
+    ElMessage.warning(`文件"${file.name}"已存在!`)
+    return false
+  }
+  fileNameToHash.value.set(file.name, fileHash)
+  hashToFileName.value.set(fileHash, file.name)
+
+  // 将文件先添加到待处理列表中
+  pendingFiles.value.push(file)
+  fileSizeTotal.value += file.size
+  if (fileSizeTotal.value > MAX_UPLOAD_LIMIT) {
+    ElMessage.warning('上传总文件大小最大500M')
+    // 回退添加的文件大小
+    fileSizeTotal.value -= file.size
+    // 移除文件哈希
+    fileNameToHash.value.delete(file.name)
+    hashToFileName.value.delete(fileHash)
+    pendingFiles.value = []
+    return false
+  }
+  return true
+}
+```
+
