--- a/docs/linux/Nginx/4.nginx常见问题.md
+++ b/docs/linux/Nginx/4.nginx常见问题.md
@@ -91,6 +91,11 @@ location /pictures/ {
 
 总结，proxy_pass没有斜杠，则只替换ip和端口部分，有斜杠则将匹配部分后的值拼接到proxy_pass上
 
+📌 **记忆方法**：
+
+- **`proxy_pass` 不加 `/`** → **原样转发路径**
+- **`proxy_pass` 加 `/`** → **去掉 `location` 匹配的部分**
+
 
 
 ## root和alias的区别
