[build] docs: update

--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -146,7 +146,7 @@ const localeId = computed({
 </script>
 ```
 
-defineModel
+编写一个defineModel函数
 
 ```ts
 function defineModel(name = 'modelValue') {
@@ -183,6 +183,10 @@ const id = defineModel('id', {
     }
 })
 ```
+
+### defineModel的应用
+
+defineModel特别适用于ElDialog等组件的visible绑定
 
 
 
