--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -1096,6 +1096,33 @@ declare module '@vue/runtime-core' {
 </span>Ï
 ```
 
+### 给一个组件设置class
+
+在 Vue3 中，当你给一个组件设置 class 属性时，这个属性最终会被应用到组件的根元素上。
+
+如果组件只有一个根元素，则class会被自动应用到根元素上；反之如果组件有多个根元素，Vue3 不会自动决定将 class 应用到哪个元素上。你需要在组件中使用v-bind="$attrs"显式指定哪个元素接收这些属性
+
+```vue
+<!-- MultiRootComponent.vue -->
+<template>
+  <header>标题</header>
+  <main v-bind="$attrs">内容</main>
+  <footer>页脚</footer>
+</template>
+```
+
+### 禁用属性继承
+
+如果不希望组件根元素继承class属性，可以给组件设置inheritAttrs: false
+
+```vue
+<script setup lang="ts">
+defineOptions({
+  inheritAttrs: false
+})
+</script>
+```
+
 
 
 ## useTemplateRef
