--- a/docs/frontend/React/4.前端常见解决方案/14-图片预加载和懒加载.md
+++ b/docs/frontend/React/4.前端常见解决方案/14-图片预加载和懒加载.md
@@ -149,7 +149,7 @@ const retry = () => {
 
 ## 图片懒加载
 
-**自定义指令**
+**1.自定义指令**
 
 ```ts
 const lazyLoadImgDirective: ObjectDirective = {
@@ -174,6 +174,38 @@ how to use:
 ```html
 <img data-src="https://picsum.photos/1000/2000" v-lazy-load-img />
 ```
+
+
+
+这里需要注意的是
+
+IntersectionObserver 的触发条件是：
+
+1. 元素必须**存在于 DOM 中**且**参与页面布局**（未被 `display: none` 隐藏）。
+2. 元素的位置和尺寸需要能被浏览器计算。
+
+也就是说：如果元素被`v-show` 隐藏（`display: none`），则：
+
+- **元素不会触发 IntersectionObserver 的回调**，因为它被移出布局计算。
+- **Observer 无法检测到元素的可见性变化**，即使后续元素变为可见（`display: block`），Observer 也不会自动重新检测。
+
+**2.img原生loading="lazy"**
+
+img元素原生支持loading="lazy"懒加载
+
+mdn是如此介绍的：
+
+> 延迟加载图像，直到它和视口接近到一个计算得到的距离（由浏览器定义）。
+
+## 使用decode API优化图片加载
+
+1️⃣ **避免渲染阻塞**
+
+默认情况下，浏览器会在 `img` 加载后立即渲染图片，这可能导致 **主线程阻塞**，影响页面交互。而 `image.decode()` 会在 **后台** 解析图片数据，等图片 **完全解码** 后再渲染，避免卡顿。
+
+2️⃣ **提升首屏渲染**
+
+使用 `image.decode()` 可以在 **合适的时机** 渲染图片，减少页面白屏时间，特别适用于 **大图片** 或 **多图片加载** 的场景。
 
 
 
