--- a/docs/frontend/React/4.前端常见解决方案/14-图片预加载和懒加载.md
+++ b/docs/frontend/React/4.前端常见解决方案/14-图片预加载和懒加载.md
@@ -149,7 +149,7 @@ const retry = () => {
 
 ## 图片懒加载
 
-**1.自定义指令**
+### 1.自定义指令
 
 ```ts
 const lazyLoadImgDirective: ObjectDirective = {
@@ -189,13 +189,39 @@ IntersectionObserver 的触发条件是：
 - **元素不会触发 IntersectionObserver 的回调**，因为它被移出布局计算。
 - **Observer 无法检测到元素的可见性变化**，即使后续元素变为可见（`display: block`），Observer 也不会自动重新检测。
 
-**2.img原生loading="lazy"**
+### 2.img原生loading="lazy"
 
 img元素原生支持loading="lazy"懒加载
 
 mdn是如此介绍的：
 
 > 延迟加载图像，直到它和视口接近到一个计算得到的距离（由浏览器定义）。
+
+### 3.使用 lazysizes 库
+
+https://github.com/aFarkas/lazysizes
+
+```sh
+npm install lazysizes
+```
+
+使用：
+
+给图片设置data-src属性和class="lazyload"即可
+
+```html
+<img
+     data-src="large-image.jpg"
+     alt="A large image"
+     width="600"
+     height="400"
+     class="lazyload"
+     />
+```
+
+
+
+
 
 ## 使用decode API优化图片加载
 
