--- a/docs/frontend/React/4.前端常见解决方案/3-前端文件上传与下载.md
+++ b/docs/frontend/React/4.前端常见解决方案/3-前端文件上传与下载.md
@@ -680,3 +680,58 @@ const beforeUpload = async (file: File) => {
 }
 ```
 
+
+
+## 文件类型判断
+
+1.通过MIME判断
+
+上传的file.type是文件的MIME类型
+
+但是单纯靠MIME来判断可能会有问题
+
+> 在macos上传的markdown文件其file.type="text/x-markdown"，但是在Windows上传的md文件file.type=""。
+>
+> 这是因为：
+>
+> - Windows 原生没有 `.md` 的 MIME 类型映射（特别是默认情况下未安装支持 Markdown 的软件）。
+> - 由于 Windows 的 MIME 类型主要由 **注册表** 控制，而 `.md` 可能没有在注册表中正确映射，因此 `file.type` 可能为空。
+
+所以文件类型判断要结合扩展名和MIME类型来综合判断
+
+```ts
+// 获取文件扩展名
+const fileName = file.name
+const fileExtension = fileName.substring(fileName.lastIndexOf('.') + 1).toLowerCase()
+
+// 检查文件是否符合允许的类型
+// 1. 如果文件类型不为空，检查是否在白名单中
+// 2. 如果文件类型为空，检查扩展名是否在允许列表中
+const isValidType =
+      (file.type && allowedMimeTypes.includes(file.type)) ||
+      (!file.type && allowedExtensions.includes(fileExtension))
+
+if (!isValidType) {
+    ElMessage.warning('上传文件格式不支持')
+    return false
+}
+
+// 计算文件哈希
+const fileHash = await calculateFileHash(file)
+
+// 检查文件是否重复
+const isDuplicateName = fileNameToHash.value.has(file.name)
+const isDuplicateContent = hashToFileName.value.has(fileHash)
+
+if (isDuplicateContent) {
+    ElMessage.warning(`已存在相同内容的文件!`)
+    return false
+}
+if (isDuplicateName && isDuplicateContent) {
+    ElMessage.warning(`文件"${file.name}"已存在!`)
+    return false
+}
+// 后端校验
+const isDuplicateOnServer = await vetrfyFileOnServer(file.name)
+```
+
