--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -806,6 +806,35 @@ const showAsyncComponent = ref<boolean>(false)
 
 
 
+## React lazy 对比 Vue defineAsyncComponent
+
+相比 React `lazy`，Vue 3 的 `defineAsyncComponent` 提供更多控制：
+
+```ts
+const AsyncComponent = defineAsyncComponent({
+  loader: () => import("./AsyncComponent.vue"),
+  loadingComponent: LoadingComponent, // 加载时显示的组件
+  errorComponent: ErrorComponent, // 发生错误时显示的组件
+  delay: 200, // 200ms 后才显示 loading
+  timeout: 3000, // 3秒后如果还未加载则报错
+  onError(error, retry, fail, attempts) {
+    if (attempts < 3) {
+      retry(); // 失败时重试3次
+    } else {
+      fail(); // 彻底失败
+    }
+  },
+});
+```
+
+
+
+
+
+
+
+
+
 ## Teleport
 
 Vue的Teleport和React的createProtal功能类似，可以把dom结构插入到指定的位置
